# SC-Payload

./: .gitignore  ImageData.h  SCPayload.sln  Telem.h
SC-Payload/: IP.txt  SC-Payload.sln
SC-Payload/SC-Payload/: SC-Payload.vcxproj  SC-Payload.vcxproj.filters
SC-Payload/SC-Payload-Tests/: SC-Payload-Tests.cpp  SC-Payload-Tests.vcxproj  SC-Payload-Tests.vcxproj.filters
SCPayload/: Doxyfile  ImageData.cs  Packet.cs  Payload.cs  Program.cs  Telem.cs
Tests/: CMakeLists.txt  Tests.cpp
source code/: CMakeLists.txt  IP.txt  ImageData.cpp  ImageData.h  Main.cpp  Packet.cpp  Packet.h  Payload.cpp  Payload.h  Telem.cpp  Telem.h  crow_all.h
